--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
-        <script src="script.js" defer></script>
+        <script src="js/script.js" defer></script>
     </head>
     <body>
         <div id="contenedor">
@@ -13,13 +14,15 @@
                     <input class="item" id="peso" type="number" placeholder="Peso en kg" />
                     <p class="item" id="error">* Debe completar todos los datos</p>
                     <button class="item" id="calcular">Calcular</button>
-                    <p class="item resultado" id="flu">71cc/h</p>
-                    <p class="item resultado" id="man">m+m/2 : 105cc/h</p>
+                    <button class="item" id="borrar">Borrar </button>
+                    <p class="item resultado" id="flu">Volumen diario en cc: 71</p>
+                    <p class="item resultado" id="man">Mantenimiento en cc/hr: 105</p>
+                    <p class="item resultado" id="metodo">Método utilizado: </p>
                 </div>
             </div>
             <div id="detalle">
                 <div class="contenido">
-                    <h1>¿Como se calcula?</h1>
+                    <h1>¿Cómo se calcula?</h1>
                     <ul>
                         <li>De 0kg a 10kg, se calcula 100cc por cada kilo.</li>
                         <li>Se suman 50cc por cada kilo de peso por arriba de 10kg, hasta 20kg</li>
